tests/ui/rfcs/rfc-2632-const-trait-impl/call-generic-method-nonconst.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/call-generic-method-nonconst.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `S: const Foo` is not satisfied
  --> $DIR/call-generic-method-nonconst.rs:23:34
   |
LL | pub const EQ: bool = equals_self(&S);
   |                      ----------- ^^ the trait `const Foo` is not implemented for `S`
   |                      |
   |                      required by a bound introduced by this call
   |
   = help: the trait `Foo` is implemented for `S`
note: required by a bound in `equals_self`
  --> $DIR/call-generic-method-nonconst.rs:16:25
   |
LL | const fn equals_self<T: ~const Foo>(t: &T) -> bool {
   |                         ^^^^^^^^^^ required by this bound in `equals_self`

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
